# Ex2

./: .gitignore  BMP.cpp  ErrorCode.cpp  ErrorCode.h  Matrix.c  Matrix.cpp  Matrix.h  Matrix.hpp  README.md  bmp_parser.cpp  bmp_parser.hpp  bmp_tester.cpp  bmp_tester.hpp  details  file_reading.cpp  tutorial.cpp  tutorial2.cpp
src/: CMakeLists.txt  ErrorCode.h  Matrix.h  Matrix1.cpp  Matrix1.hpp  MatrixClass.hpp  bmp_parser.cpp  bmp_parser.hpp  bmp_tester.cpp  main.cpp
